@@ -15,6 +15,7 @@ FIXES
 * Fixed bug #502: 4.0.0: Configuration -> Service Escalations = incomplete list (Eric Stanley)
 * Fixed bug #523: quotes and double quostes in plugin message are converted to HTML escapes in Nagios 4.0 (duplicate of bug #524)
 * Fixed bug #524: URLs returned in plugin check results are not correctly displayed (Eric Stanley)
+* Fixed bug where passive service checks would return "Service check timed out after 0.00 seconds" (Scott Wilkerson)
 
 4.0.2 - 11/25/2013
 ------------------
